--- a/MavenJUnitTest/Jenkinsfile
+++ b/MavenJUnitTest/Jenkinsfile
@@ -2,33 +2,33 @@ pipeline{
     agent any
    
     tools { 
-        maven 'maven'
+        maven 'Maven'
         jdk 'jdk'
     }
         stages{
             stage('Git-Checkout')
             {
                 steps{
-                     git 'https://github.com/sravanin15/HelloworldMaven.git'
+                     git 'https://github.com/sreelakshmi665/mavenJunitTest.git'
                 }
             }
              stage('Validate')
         {
             steps{
-                bat 'mvn -f helloWorld/pom.xml validate'
+                bat 'mvn -f MavenJunitTest validate'
             }
         }
         stage('Compile')
         {
             steps{
-                bat 'mvn -f  helloWorld/pom.xml compile'
+                bat 'mvn -f  MavenJunitTest compile'
             }
         }
         stage('sonar analysis'){
             steps{
-                withSonarQubeEnv('sonarserver'){
-                    withMaven(maven:'maven'){
-                        bat 'mvn -f helloWorld sonar:sonar'
+                withSonarQubeEnv('sonar-server'){
+                    withMaven(maven:'Maven'){
+                        bat 'mvn -f MavenJunitTest sonar:sonar'
                     }
                 }
             }
@@ -42,25 +42,25 @@ pipeline{
         stage('Test')
         {
             steps{
-                bat 'mvn -f  helloWorld/pom.xml test'
+                bat 'mvn -f  MavenJunitTest test'
             }
         }
         stage('Package')
         {
             steps{
-                bat 'mvn -f  helloWorld/pom.xml package'
+                bat 'mvn -f  MavenJunitTest package'
             }
         }
         stage('Verify')
         {
             steps{
-                bat 'mvn -f helloWorld/pom.xml verify'
+                bat 'mvn -f MavenJunitTest verify'
             }
         }
         stage('Install')
         {
             steps{
-                bat 'mvn -f  helloWorld/pom.xml install '
+                bat 'mvn -f  MavenJunitTest install '
             }
         }
         
@@ -72,13 +72,12 @@ pipeline{
           spec: '''{
           "files": [
             {
-              "pattern": "helloWorld/target/*.jar",
+              "pattern": "MavenJunitTest/target/*.jar",
               "target": "art-doc-dev-loc"
             }
          ]
     }''',
-           buildName: 'holyFrog',
-    buildNumber: '42'
+          
 )
   }
 }   
@@ -93,7 +92,7 @@ pipeline{
              echo 'This will run only if successful'  
          }  
          failure {  
-             mail bcc: '', body: "<b>Example</b><br>Project: ${env.JOB_NAME} <br>Build Number: ${env.BUILD_NUMBER} <br> URL de build: ${env.BUILD_URL}", cc: '', charset: 'UTF-8', from: 'sravaninuthanapati15@gmail.com', mimeType: 'text/html', replyTo: '', subject: "ERROR CI: Project name -> ${env.JOB_NAME}", to: "sravaninuthanapati15@gmail.com";  
+             mail bcc: '', body: "<b>Example</b><br>Project: ${env.JOB_NAME} <br>Build Number: ${env.BUILD_NUMBER} <br> URL de build: ${env.BUILD_URL}", cc: '', charset: 'UTF-8', from: 'sreelakshmilucky14@gmail.com', mimeType: 'text/html', replyTo: '', subject: "ERROR CI: Project name -> ${env.JOB_NAME}", to: "sreelakshmilucky14@gmail.com";  
          }  
          unstable {  
              echo 'This will run only if the run was marked as unstable'  
