--- a/MavenJUnitTest/pom.xml
+++ b/MavenJUnitTest/pom.xml
@@ -23,5 +23,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+  <groupId>junit</groupId>     <!-- NOT org.junit here -->
+  <artifactId>junit-dep</artifactId>
+  <version>4.8.2</version>
+  <scope>test</scope>
+</dependency>
   </dependencies>
 </project>
