--- a/MavenJUnitTest/Jenkinsfile
+++ b/MavenJUnitTest/Jenkinsfile
@@ -34,6 +34,11 @@ pipeline{
             }
 
         }
+             stage("Quality gate") {
+            steps {
+                waitForQualityGate abortPipeline: true
+            }
+        }
         stage('Test')
         {
             steps{
