--- a/MavenJUnitTest/Jenkinsfile
+++ b/MavenJUnitTest/Jenkinsfile
@@ -34,9 +34,17 @@ pipeline{
             }
 
         }
-             stage("Quality gate") {
-            steps {
-                waitForQualityGate abortPipeline: true
+             stage('SonarQube Quality Gate') { 
+            steps{
+                timeout(time: 1, unit: 'HOURS') { 
+                    script{
+                        def qg = waitForQualityGate() 
+                        if (qg.status != 'OK') {
+                            error "Pipeline aborted due to quality gate failure: ${qg.status}"
+                         }
+                    }
+                    
+                }
             }
         }
         stage('Test')
