--- a/MavenJUnitTest/Jenkinsfile
+++ b/MavenJUnitTest/Jenkinsfile
@@ -36,7 +36,7 @@ pipeline{
         }
              stage('SonarQube Quality Gate') { 
             steps{
-                timeout(time: 1, unit: 'HOURS') { 
+                timeout(time: 5, unit: 'MINUTES') { 
                     script{
                         def qg = waitForQualityGate() 
                         if (qg.status != 'OK') {
