--- a/MavenJUnitTest/Jenkinsfile
+++ b/MavenJUnitTest/Jenkinsfile
@@ -9,26 +9,38 @@ pipeline{
             stage('Git-Checkout')
             {
                 steps{
+                     script{
+                        FAILED_STAGE=env.STAGE_NAME
                      git 'https://github.com/sreelakshmi665/mavenJunitTest.git'
+                     }
                 }
             }
              stage('Validate')
         {
             steps{
+                 script{
+                        FAILED_STAGE=env.STAGE_NAME
                 bat 'mvn -f MavenJUnitTest clean validate'
+                 }
             }
         }
         stage('Compile')
         {
             steps{
+                 script{
+                        FAILED_STAGE=env.STAGE_NAME
                 bat 'mvn -f  MavenJUnitTest compile'
+                 }
             }
         }
         stage('sonar analysis'){
             steps{
+                 script{
+                        FAILED_STAGE=env.STAGE_NAME
                 withSonarQubeEnv('sonar-server'){
                     withMaven(maven:'Maven'){
                         bat 'mvn -f MavenJUnitTest sonar:sonar'
+                    }
                     }
                 }
             }
@@ -36,12 +48,15 @@ pipeline{
         }
              stage('SonarQube Quality Gate') { 
             steps{
+                 script{
+                        FAILED_STAGE=env.STAGE_NAME
                 timeout(time: 5, unit: 'MINUTES') { 
                     script{
                         def qg = waitForQualityGate() 
                         if (qg.status != 'OK') {
                             error "Pipeline aborted due to quality gate failure: ${qg.status}"
                          }
+                    }
                     }
                     
                 }
@@ -50,37 +65,54 @@ pipeline{
         stage('Test')
         {
             steps{
+                 script{
+                        FAILED_STAGE=env.STAGE_NAME
                 bat 'mvn -f  MavenJUnitTest test'
+                 }
             }
         }
         stage('Package')
         {
             steps{
+                 script{
+                        FAILED_STAGE=env.STAGE_NAME
                 bat 'mvn -f  MavenJUnitTest package'
+                 }
             }
         }
         stage('Verify')
         {
             steps{
+                 script{
+                        FAILED_STAGE=env.STAGE_NAME
                 bat 'mvn -f MavenJUnitTest verify'
+                 }
             }
         }
         stage('Install')
         {
             steps{
+                 script{
+                        FAILED_STAGE=env.STAGE_NAME
                 bat 'mvn -f  MavenJUnitTest install '
+                 }
             }
         }
       stage('Artifactory')
     {
       steps{
+           script{
+                        FAILED_STAGE=env.STAGE_NAME
         archiveArtifacts artifacts:'MavenJUnitTest/target/*.jar',followSymlinks:false
+           }
       }
     }
         
     stage('Deploy-To-Artifactory')
     {
       steps{
+           script{
+                        FAILED_STAGE=env.STAGE_NAME
         rtUpload(
           serverId:'artifactory-server',
           spec: '''{
@@ -95,7 +127,7 @@ pipeline{
 )
   }
 }   
-            
+    }         
            
         }
     post {  
@@ -106,7 +138,7 @@ pipeline{
              echo 'This will run only if successful'  
          }  
          failure {  
-             mail bcc: '', body: "<b>Example</b><br>Project: ${env.JOB_NAME} <br>Build Number: ${env.BUILD_NUMBER} <br> URL de build: ${env.BUILD_URL}", cc: '', charset: 'UTF-8', from: 'sreelakshmilucky14@gmail.com', mimeType: 'text/html', replyTo: '', subject: "ERROR CI: Project name -> ${env.JOB_NAME}", to: "sreelakshmilucky14@gmail.com";  
+             mail bcc: '', body: "<b>Example</b><br>Project: ${env.JOB_NAME} <br>Build Number: ${env.BUILD_NUMBER} <br>Build Stage: ${FAILED_STAGE} <br> URL de build: ${env.BUILD_URL}", cc: '', charset: 'UTF-8', from: 'sreelakshmilucky14@gmail.com', mimeType: 'text/html', replyTo: '', subject: "ERROR CI: Project name -> ${env.JOB_NAME}", to: "sreelakshmilucky14@gmail.com";  
          }  
          unstable {  
              echo 'This will run only if the run was marked as unstable'  
